--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,19 @@ input[type="button"] {
     z-index: -1;
 }
 
+/*Efeito verão*/
+.verao{
+    background-size: cover;
+    min-height: 100vh;
+    width: 100%;
+    height: 100vh;
+    opacity: 0.8;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
 /*Efeito de Inverno*/
 span {
     position: absolute;
